Updated code to make HotelSEarch and LocateHotel work

--- a/Chatbot_v2.ipynb
+++ b/Chatbot_v2.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from textblob import TextBlob\n",
-    "#from attributegetter import *\n",
+    "from textblob import TextBlob\n",
+    "from attributegetter import *\n",
     "from generatengrams import ngrammatch\n",
     "from Contexts import *\n",
     "import json\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "def input_processor(user_input, context, attributes, intent):\n",
     "    '''Spellcheck and entity extraction functions go here'''\n",
     "    \n",
-    "    #uinput = TextBlob(user_input).correct().string\n",
+    "    uinput = TextBlob(user_input).correct().string\n",
     "    \n",
     "    #update the attributes, abstract over the entities in user input\n",
     "    attributes, cleaned_input = getattributes(user_input, context, attributes)\n",
@@ -73,10 +73,12 @@
     "    \n",
     "\n",
     "    if(current_intent==None):\n",
-    "        if(clean_input==\"search\"):\n",
-    "            return loadIntent('params/newparams.cfg', 'SearchStore')\n",
+    "        if(clean_input==\"find\" or clean_input=='search'):\n",
+    "            return loadIntent('params/newparams.cfg', 'HotelSearch')\n",
     "        if(clean_input=='book'):\n",
-    "            return loadIntent('params/newparams.cfg','OrderBook')\n",
+    "            return loadIntent('params/newparams.cfg','BookHotel')\n",
+    "        if(clean_input=='locate'):\n",
+    "            return loadIntent('params/newparams.cfg','LocateHotel')\n",
     "        else:\n",
     "            return loadIntent('params/newparams.cfg',scores[-1][0])\n",
     "    else:\n",
@@ -112,13 +114,14 @@
     "                uinput = re.sub('[0-9]+', '$regno', uinput)\n",
     "                attributes['RegNo'] = match.group()\n",
     "                context.active = False\n",
-    "\n",
+    "        \n",
+    "        #print(attributes)\n",
     "        return attributes, uinput"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +179,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BOT: Hi! How may I assist you?\n"
+      "BOT: Hi! How may I assist you?\n",
+      "User:  book\n",
+      "BOT: What's the name of the hotel you would like to book?\n",
+      "User:  Taj in Mumbai\n",
+      "BOT: Please mention the Check-In Date\n",
+      "User:  23/3/2018\n",
+      "BOT: Please mention the Check-In Date\n",
+      "User:  From 3 Mar to 4 Mar\n",
+      "BOT: Please mention the Check-In Date\n"
      ]
     }
    ],
@@ -188,6 +199,7 @@
     "while True:\n",
     "    \n",
     "    inp = input('User: ')\n",
+    "    print('User: ', inp)\n",
     "    print ('BOT:', session.reply(inp))"
    ]
   },
@@ -215,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
