Improved the interactivity of the BOT

--- a/Chatbot_v2.ipynb
+++ b/Chatbot_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "    '''Collects attributes pertaining to the current intent'''\n",
     "    \n",
     "    for para in current_intent.params:\n",
-    "        if para.required:\n",
+    "        if para.required == \"True\":\n",
     "            if para.name not in attributes:\n",
     "                if para.name=='RegNo':\n",
     "                    context = GetRegNo()\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,33 +174,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BOT: Hi! How may I assist you?\n",
-      "User:  book\n",
-      "BOT: What's the name of the hotel you would like to book?\n",
-      "User:  Taj in Mumbai\n",
-      "BOT: Please mention the Check-In Date\n",
-      "User:  23/3/2018\n",
-      "BOT: Please mention the Check-In Date\n",
-      "User:  From 3 Mar to 4 Mar\n",
-      "BOT: Please mention the Check-In Date\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "session = Session()\n",
     "\n",
-    "print ('BOT: Hi! How may I assist you?')\n",
+    "print(\"HOTEL ROOM BOOKING\")\n",
+    "print(\"Welcome to the Hotel Room Booking. What do you want to do?\")\n",
+    "print(\"1. Book a Room\")\n",
+    "print(\"2. Locate a Hotel\")\n",
+    "print(\"3. Search for Available Rooms\\n\\n\")\n",
+    "\n",
+    "print ('[BOT]: Hi! How may I assist you?')\n",
     "\n",
     "while True:\n",
     "    \n",
     "    inp = input('User: ')\n",
-    "    print('User: ', inp)\n",
-    "    print ('BOT:', session.reply(inp))"
+    "    print('[User]: ', inp)\n",
+    "    print ('[BOT]:', session.reply(inp))"
    ]
   },
   {
@@ -227,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
