Renamed the intents and Updated the parameter config file

--- a/Chatbot_v2.ipynb
+++ b/Chatbot_v2.ipynb
@@ -74,9 +74,9 @@
     "\n",
     "    if(current_intent==None):\n",
     "        if(clean_input==\"restaurant\" or clean_input=='cuisine'):\n",
-    "            return loadIntent('params/newparams.cfg', 'BookRestaurant')\n",
+    "            return loadIntent('params/newparams.cfg', 'RestaurantBooking')\n",
     "        if(clean_input=='hotel' or clean_input=='room'):\n",
-    "            return loadIntent('params/newparams.cfg','BookHotel')\n",
+    "            return loadIntent('params/newparams.cfg','HotelBooking')\n",
     "        else:\n",
     "            return loadIntent('params/newparams.cfg',scores[-1][0])\n",
     "    else:\n",
