Added regex regognition for intent and Updated code

--- a/Chatbot_v2.ipynb
+++ b/Chatbot_v2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from textblob import TextBlob\n",
+    "#from textblob import TextBlob\n",
     "#from attributegetter import *\n",
     "from generatengrams import ngrammatch\n",
     "from Contexts import *\n",
@@ -14,7 +14,18 @@
     "from Intents import *\n",
     "import random\n",
     "import os\n",
-    "import re"
+    "import re\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HOTEL_REGEX = \"(stay)|(hotel)|(room)|(motel)|(inn)\"\n",
+    "RESTAURANT_REGEX = \"(eat)|(food)|(veg)|(restaurant)|(hungry)|(starving)|(organic)|(cuisine)|(buffet)|(serve)\""
    ]
   },
   {
@@ -51,7 +62,7 @@
     "def input_processor(user_input, context, attributes, intent):\n",
     "    '''Spellcheck and entity extraction functions go here'''\n",
     "    \n",
-    "    uinput = TextBlob(user_input).correct().string\n",
+    "    #uinput = TextBlob(user_input).correct().string\n",
     "    \n",
     "    #update the attributes, abstract over the entities in user input\n",
     "    attributes, cleaned_input = getattributes(user_input, context, attributes)\n",
@@ -73,9 +84,9 @@
     "    \n",
     "\n",
     "    if(current_intent==None):\n",
-    "        if(clean_input==\"restaurant\" or clean_input=='cuisine'):\n",
+    "        if(re.search(RESTAURANT_REGEX, clean_input)):\n",
     "            return loadIntent('params/newparams.cfg', 'RestaurantBooking')\n",
-    "        if(clean_input=='hotel' or clean_input=='room'):\n",
+    "        if(re.search(HOTEL_REGEX, clean_input)):\n",
     "            return loadIntent('params/newparams.cfg','HotelBooking')\n",
     "        else:\n",
     "            return loadIntent('params/newparams.cfg',scores[-1][0])\n",
@@ -189,6 +200,130 @@
     "    inp = input('User: ')\n",
     "    print('[User]: ', inp)\n",
     "    print ('[BOT]:', session.reply(inp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_db(db_name):\n",
+    "    DB_PATH = './db/'\n",
+    "    db = []\n",
+    "    \n",
+    "    with open(DB_PATH + db_name) as file:\n",
+    "        for line in file.readlines():\n",
+    "            data = line.rstrip().split(',')\n",
+    "            db.append(data)\n",
+    "            \n",
+    "    return db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def BookHotel(attributes):\n",
+    "    #constants\n",
+    "    AMP = \"&\"\n",
+    "    SPACE = \" \"\n",
+    "    HOTEL_DB_COL_MAP = {\n",
+    "        \"hloc\": \"LOCATION\",\n",
+    "        \"starrating\": \"STAR RATING\",\n",
+    "        \"Tariff\": \"TARIFF\"\n",
+    "    }\n",
+    "    \n",
+    "    db = pd.read_csv(\"./db/db_hotel.csv\")\n",
+    "    #query = \"db.loc(\"\n",
+    "    print(\"Before\")\n",
+    "    print(db)\n",
+    "    \n",
+    "    for attr, val in attributes.items():\n",
+    "        col_name = HOTEL_DB_COL_MAP[attr]\n",
+    "        #query += \"(db['{}'] == '{}') & \".format(col_name, val)\n",
+    "        db = db[db[col_name] == val]\n",
+    "    \n",
+    "    #query = query[:-3] + \")\"\n",
+    "    #print(query)\n",
+    "    print(\"After\")\n",
+    "    print(db)\n",
+    "    \n",
+    "    #hotel_names = query[\"HOTEL NAME\"]\n",
+    "    hotel_names = db[\"HOTEL NAME\"]\n",
+    "    \n",
+    "    for i, hotel in enumerate(hotel_names):\n",
+    "        print(\"{}. {}\".format(i + 1, hotel))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attributes = {'hloc': 'ASSAM', 'starrating': '3 Star', 'Tariff': '6000'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_hotels(attributes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = pd.read_csv(\"./db/db_hotel.csv\")\n",
+    "hotel_names = (db.loc[(db['LOCATION'] == \"DELHI\") & (db['STAR RATING'] == \"5 Star\")])[\"HOTEL NAME\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(hotel_names.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attributes_db = {'hloc': 'DELHI', 'starrating': '1 Star'}\n",
+    "BookHotel(attributes_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = pd.read_csv(\"./db/db_hotel.csv\")\n",
+    "db\n",
+    "u = db[db[\"LOCATION\"] == \"DELHI\"]\n",
+    "u[u[\"STAR RATING\"] == \"1 Star\"]"
    ]
   },
   {
