--- a/Chatbot_v2.ipynb
+++ b/Chatbot_v2.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "HOTEL_REGEX = \"(stay)|(hotel)|(room)|(motel)|(inn)\"\n",
-    "RESTAURANT_REGEX = \"(eat)|(food)|(veg)|(restaurant)|(hungry)|(starving)|(organic)|(cuisine)|(buffet)|(serve)\""
+    "RESTAURANT_REGEX = \"(eat)|(party)|(table)|(food)|(veg)|(restaurant)|(hungry)|(starving)|(organic)|(cuisine)|(buffet)|(serve)\""
    ]
   },
   {
@@ -37,13 +37,20 @@
     "def check_actions(current_intent, attributes, context):\n",
     "    '''This function performs the action for the intent\n",
     "    as mentioned in the intent config file'''\n",
-    "    '''Performs actions pertaining to current intent\n",
-    "    for action in current_intent.actions:\n",
-    "        if action.contexts_satisfied(active_contexts):\n",
-    "            return perform_action()\n",
-    "    '''\n",
-    "\n",
+    "    '''Performs actions pertaining to current intent'''\n",
+    "    #for action in current_intent.action:\n",
+    "        #print(action)\n",
+    "    \n",
+    "    #print(context)\n",
+    "    #print(type(current_intent.action))\n",
     "    context = IntentComplete()\n",
+    "    \n",
+    "    if current_intent.action == 'BookRestaurant':\n",
+    "        #print(current_intent.action)\n",
+    "        return BookRestaurant(attributes), context\n",
+    "    if current_intent.action == 'BookHotel':\n",
+    "        return BookHotel(attributes), context\n",
+    "\n",
     "    return 'action: ' + current_intent.action, context\n",
     "\n",
     "def check_required_params(current_intent, attributes, context):\n",
@@ -118,11 +125,14 @@
     "                uinput = re.sub(entities[entity],r'$'+entity,uinput,flags=re.IGNORECASE)\n",
     "\n",
     "        if context.name=='GetTariff'  and context.active:\n",
-    "            print('Tariff')\n",
-    "            match = re.search('[0-9]+', uinput)\n",
-    "            if match:\n",
-    "                uinput = re.sub('[0-9]+', '$tariff', uinput)\n",
-    "                attributes['Tariff'] = match.group()\n",
+    "            #print('Tariff')\n",
+    "            match = re.findall('[<|>|<=|>=]?\\s*[0-9]+\\s*[-]?\\s*[0-9]+', uinput)\n",
+    "            if len(match):\n",
+    "                uinput = re.sub('[<|>|<=|>=]?\\s*[0-9]+\\s*[-]?\\s*[0-9]+', '$tariff', uinput)\n",
+    "                x=\"\"\n",
+    "                for m in match:\n",
+    "                    x += m + \",\"\n",
+    "                attributes['Tariff'] = x[:-1]\n",
     "                context.active = False\n",
     "        \n",
     "        print(attributes)\n",
@@ -186,46 +196,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = Session()\n",
-    "\n",
-    "print(\"RESTAURANT/HOTEL BOOKING PORTAL\")\n",
-    "print(\"Welcome to the Hotel/Restaurant Booking Portal. What do you want to do?\")\n",
-    "print(\"1. Book a Hotel\")\n",
-    "print(\"2. Book a Restaurant\\n\\n\")\n",
-    "\n",
-    "print ('[BOT]: Hi! How may I assist you?')\n",
-    "\n",
-    "while True:\n",
-    "    \n",
-    "    inp = input('User: ')\n",
-    "    print('[User]: ', inp)\n",
-    "    print ('[BOT]:', session.reply(inp))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_db(db_name):\n",
-    "    DB_PATH = './db/'\n",
-    "    db = []\n",
-    "    \n",
-    "    with open(DB_PATH + db_name) as file:\n",
-    "        for line in file.readlines():\n",
-    "            data = line.rstrip().split(',')\n",
-    "            db.append(data)\n",
-    "            \n",
-    "    return db"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def BookHotel(attributes):\n",
     "    #constants\n",
     "    AMP = \"&\"\n",
@@ -237,93 +207,92 @@
     "    }\n",
     "    \n",
     "    db = pd.read_csv(\"./db/db_hotel.csv\")\n",
-    "    #query = \"db.loc(\"\n",
-    "    print(\"Before\")\n",
-    "    print(db)\n",
     "    \n",
     "    for attr, val in attributes.items():\n",
     "        col_name = HOTEL_DB_COL_MAP[attr]\n",
-    "        #query += \"(db['{}'] == '{}') & \".format(col_name, val)\n",
+    "        #print(val)\n",
+    "        if col_name == \"TARIFF\":\n",
+    "            val = val.split(\",\");\n",
+    "            \n",
+    "            for v in val:\n",
+    "                if \">\" in v:\n",
+    "                    v = v.replace(\">\", \"\").strip()\n",
+    "                    #print(v)\n",
+    "                    db = db[db[col_name] > int(v)]\n",
+    "                if \"<\" in v:\n",
+    "                    v = v.replace(\"<\", \"\").strip()\n",
+    "                    db = db[db[col_name] < int(v)]\n",
+    "                if \"<=\" in v:\n",
+    "                    v = v.replace(\"<=\", \"\").strip()\n",
+    "                    db = db[db[col_name] <= int(v)]\n",
+    "                if \">=\" in v:\n",
+    "                    v = v.replace(\">=\", \"\").strip()\n",
+    "                    db = db[db[col_name] >= int(v)]\n",
+    "                if \"-\" in v:\n",
+    "                    v = v.split(\"-\")\n",
+    "                    db = db[db[col_name] < int(v[0].strip())]\n",
+    "                    db = db[db[col_name] > int(v[1].strip())]\n",
+    "        else:       \n",
+    "            db = db[db[col_name] == val]\n",
+    "\n",
+    "    hotel_names = db[\"HOTEL NAME\"]\n",
+    "    output = [\"List of Hotels matching your criterion:\\n\"]\n",
+    "    \n",
+    "    if len(hotel_names):\n",
+    "        for i, hotel in enumerate(hotel_names):\n",
+    "            output.append(\"{}. {}\".format(i + 1, hotel))\n",
+    "        \n",
+    "        return output\n",
+    "    else:\n",
+    "        return \"No Hotels found for the provided parameters\"\n",
+    "        \n",
+    "def BookRestaurant(attributes):\n",
+    "    #constants\n",
+    "    RESTAURANT_DB_COL_MAP = {\n",
+    "        \"rloc\": \"LOCATION\",\n",
+    "        \"cuisine\": \"CUISINE\",\n",
+    "        \"cost\": \"COST\"\n",
+    "    }\n",
+    "    \n",
+    "    db = pd.read_csv(\"./db/db_restaurant.csv\")\n",
+    "    \n",
+    "    for attr, val in attributes.items():\n",
+    "        col_name = RESTAURANT_DB_COL_MAP[attr]\n",
     "        db = db[db[col_name] == val]\n",
     "    \n",
-    "    #query = query[:-3] + \")\"\n",
-    "    #print(query)\n",
-    "    print(\"After\")\n",
-    "    print(db)\n",
+    "    restaurant_names = db[\"RESTAURANT NAME\"]\n",
+    "    output = [\"List of Restaurants matching your criterion:\\n\"]\n",
     "    \n",
-    "    #hotel_names = query[\"HOTEL NAME\"]\n",
-    "    hotel_names = db[\"HOTEL NAME\"]\n",
+    "    if len(restaurant_names):\n",
+    "        for i, restaurant in enumerate(restaurant_names):\n",
+    "            output.append(\"{}. {}\\n\".format(i + 1, restaurant))\n",
+    "        \n",
+    "        return output\n",
+    "    else:\n",
+    "        return \"No Restaurant found for the provided parameters\"\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = Session()\n",
+    "\n",
+    "print(\"RESTAURANT/HOTEL BOOKING PORTAL\")\n",
+    "print(\"Welcome to the Hotel/Restaurant Booking Portal. What do you want to do?\")\n",
+    "print(\"1. Book a Hotel\")\n",
+    "print(\"2. Book a Restaurant\\n\\n\")\n",
+    "\n",
+    "print ('[Team 53 BOT]: Hi! How may I assist you?')\n",
+    "\n",
+    "while True:\n",
     "    \n",
-    "    for i, hotel in enumerate(hotel_names):\n",
-    "        print(\"{}. {}\".format(i + 1, hotel))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attributes = {'hloc': 'ASSAM', 'starrating': '3 Star', 'Tariff': '6000'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attributes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_hotels(attributes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = pd.read_csv(\"./db/db_hotel.csv\")\n",
-    "hotel_names = (db.loc[(db['LOCATION'] == \"DELHI\") & (db['STAR RATING'] == \"5 Star\")])[\"HOTEL NAME\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(hotel_names.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attributes_db = {'hloc': 'DELHI', 'starrating': '1 Star'}\n",
-    "BookHotel(attributes_db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = pd.read_csv(\"./db/db_hotel.csv\")\n",
-    "db\n",
-    "u = db[db[\"LOCATION\"] == \"DELHI\"]\n",
-    "u[u[\"STAR RATING\"] == \"1 Star\"]"
+    "    inp = input('User: ')\n",
+    "    print('[User]: ', inp)\n",
+    "    print ('[Team 53 BOT]:', session.reply(inp))"
    ]
   },
   {
