--- a/Chatbot_v2.ipynb
+++ b/Chatbot_v2.ipynb
@@ -135,7 +135,7 @@
     "                attributes['Tariff'] = x[:-1]\n",
     "                context.active = False\n",
     "        \n",
-    "        print(attributes)\n",
+    "        #print(attributes)\n",
     "        return attributes, uinput"
    ]
   },
@@ -230,8 +230,10 @@
     "                    db = db[db[col_name] >= int(v)]\n",
     "                if \"-\" in v:\n",
     "                    v = v.split(\"-\")\n",
-    "                    db = db[db[col_name] < int(v[0].strip())]\n",
-    "                    db = db[db[col_name] > int(v[1].strip())]\n",
+    "                    db = db[db[col_name] < int(v[1].strip())]\n",
+    "                    db = db[db[col_name] > int(v[0].strip())]\n",
+    "                else:\n",
+    "                    db = db[db[col_name] == val]\n",
     "        else:       \n",
     "            db = db[db[col_name] == val]\n",
     "\n",
@@ -290,8 +292,7 @@
     "\n",
     "while True:\n",
     "    \n",
-    "    inp = input('User: ')\n",
-    "    print('[User]: ', inp)\n",
+    "    inp = input('[User]: ')\n",
     "    print ('[Team 53 BOT]:', session.reply(inp))"
    ]
   },
